tests/golden/compile-pass/module_inline_nested.rua
mod outer {
    pub mod inner {
        pub fn value() -> i64 {
            7
        }
    }
}

fn main() {
    let value = outer::inner::value();
}
