tests/golden/compile-fail/type_unary_invalid.rua
fn main() {
    let value = -true;
}
